fix: dropdown options have unique id now. AppElement is rendered considering id of element. style of layoutChanger in contrast mode

--- a/css/contrast.css
+++ b/css/contrast.css
@@ -97,24 +97,35 @@ textarea {
   transform: rotate(90deg);
 }
 
-.nav-bar {
-  width: fit-content;
-  position: relative;
-  z-index: 0;
+@media screen and (min-width: 1420px) {
+  .nav-bar {
+    position: fixed !important;
+    right: 0 !important;
+    opacity: 1 !important;
+  }
+
+  .nav-bar .close-icon-wrapper {
+    visibility: hidden;
+  }
+
+  .footer {
+    width: 63%;
+  }
 }
 
 .nav-bar {
+  box-sizing: border-box;
   position: fixed;
   flex-direction: column;
-  right: -400px;
+  right: -500px;
   overflow-x: hidden;
   overflow-y: auto;
   top: 0;
   z-index: 11;
   transition: all 0.25s;
-  height: 97.5%;
+  height: 100%;
   width: 100%;
-  max-width: 400px;
+  max-width: 500px;
   background-color: var(--black);
   opacity: 0;
   border: 9px solid var(--primary);
@@ -151,10 +162,40 @@ textarea {
 .nav-bar .logo-text {
   flex: 1 1 3%;
   padding-top: 4rem;
+  margin-left: 30px;
 }
 
 .layout {
   order: 1;
+  position: initial;
+  color: var(--white);
+  background: var(--black);
+  width: 100%;
+}
+
+.layout .s-icon-wrapper {
+  display: none;
+}
+
+.layout .div-element {
+  justify-content: flex-start;
+}
+
+.layout .div-element:hover.div-element::before {
+  display: none;
+}
+
+.div-element .app-span {
+  margin-left: 5rem;
+  font-size: 2.5rem;
+  width: 100%;
+  max-width: initial;
+}
+
+@media screen and (max-height: 700px) {
+  .nav-bar .logo-text {
+    padding-top: 0;
+  }
 }
 
 /* footer */
